--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,5 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Select Xcode version
+      run: sudo xcode-select -s /Applications/Xcode_16.2.app
     - name: Build and test
       run: xcodebuild clean test -scheme "Week Number" -project "Week Number.xcodeproj" -destination "platform=macOS"
